<html>
  <head>
    <style type='text/css'>
      a            { color:#a0a0e0 }
      div.title    { 
          color:#C0F0C0; 
          font-size:1.2em; 
          font-weight:bold; 
          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 1.04
  % Version 1.04
  _ 2012-09-21
  ! Honeycomb Navigation Tabs!
  	* Navigation tab framework complete
  	* Added <i>Gauges Dashboard</i> navigation tab
  % Version 1.03
  _ 2012-09-15
  ! Initial Alarm Logging Implementation
  	* Added AFR Alarm Logging - You can save and share the resulting log file.  Log files are located in /sdcard/AdaptiveTuner and are saved in CSV format.
  % Version 1.02
  _ 2012-09-14
  ! Minor Enhancements
  	* Redesigned Icon
  	* Added AFR & Temperature Alerts
  	* Added Changelog (you're reading it now)
  % Version 1.01
  _ 2012-09-14
  ! UoM
  	* Added UoM Selection for Temperature
  % Version 1.0
  _ 2012-09-12
  ! Initial Release
  	* Display Adaptive Learning Statuses
  	* Display RPM, WAT, MAT, MAP, AFR
  % Need more help?
    * <a href="http://www.shellware.com/BlogEngine.Web/page/Adaptive-Tuner-for-Adaptronic-ECUs.aspx">Adaptive Tuner Homepage</a> 
    * You can contact me directly at the above URL and you can send me an email at <a href="mailto:shell@shellware.com">shell@shellware.com</a>
$ END_OF_CHANGE_LOG
  </body>
</html>