@@ -41,6 +41,9 @@
     <string name="prefs_uom_temp_dialog_title">Selected Temperature Unit of Measure</string>
     <string name="prefs_uom_temp_title">Temperature</string>
     
+    <string name="prefs_connection_category">Connection Settings</string>
+    <string name="prefs_connection_auto_connect">Automatic Connection on Startup</string>
+    
     <string name="prefs_bt_category">Bluetooth Preferences</string>
     <string name="prefs_bt_default_device">Default Device</string>
     <string name="prefs_bt_auto_connect">Connect Automatically on Startup</string>
